workloads/sickgnal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sickgnal-server
  namespace: sickgnal
spec:
  selector:
    app: sickgnal-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
