workloads/sickgnal/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: sickgnal-tcp-ingress
  namespace: sickgnal
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`sickgnal.bapttf.com`)
      services:
        - name: sickgnal-server
          port: 8080
  tls: {}
